# llamathon-2024

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: projects.json  segments_testing.json  targeted_projects.json  targeted_projects_raw.csv
llama/: base_prompts.py  llm_helpers.py  part1_prompts.py
scripts/: helpers.py  matching.py  process_group1.py  process_group2.py  process_target_project.py  target_project.py
src/: main.py
src/llama/: base_prompts.py  extraction_prompts.py  generation_prompts.py  llm_helpers.py  part1_prompts.py
src/scripts/: helpers.py  matching.py  process_group1.py  process_target_projects.py  sylvies_little_script.py  target_project.py
src/scripts/output/: good_commits.json  group1.json  tagged_good_commits.json
step5/: main.py  requirements.txt  sample.json  update_file.py  update_requirements.py  updated_requirements.txt
step5/test2/: expected_multiplex_1_test.py  sample.json  test_multiplex_1_test.py
step5/test3/: sample.json
